test/rbkt/Queries/zorba/syntax_errors/StringLiteral_unterminated.xq
(: 
  Syntax error with an improved error message:
  unterminated string literal and the location
:)

f("badbad